--- a/website/mainPage/main.html
+++ b/website/mainPage/main.html
@@ -44,7 +44,7 @@
 <!-- Hero sveiki atvyke į pragarą -->
 <div class="hero">
   <div class="hero-area">
-    <img class="hero-img" src="/sveiki-atvyke-i-pragara.jpg" alt="Nuotrauka">
+    <img class="hero-img" src="/Untitled8_20230714115055.png" alt="Nuotrauka">
   </div>
 </div>
 <!--  -->
