--- a/website/sponsors/sponsors.html
+++ b/website/sponsors/sponsors.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="sponsors-title">
-                <h1>Pagrindiniai rėmėjaiaaaaaaaa</h1>
+                <h1>Pagrindiniai rėmėjai</h1>
             </div>    
             <div class="main-sponsors">
                 <a href="https://plungeslaguna.lt/" target="_blank">
@@ -70,14 +70,51 @@
                 <h1>Rėmėjai</h1>
             </div>
             <div class="sponsors">
-                
+              <a href="https://constro.eu/" target="_blank">
+                <img src="/newsponsors/constro.png" width="240" alt="Lagūna">
+              </a>
+              <a href="https://www.maneda.lt/" target="_blank">
+                <img src="/newsponsors/oss.png" alt="Oss">
+              </a>
+              <a href="https://psaltis.lt/" target="_blank">
+                <img src="/newsponsors/toregas.png" alt="Toregas">
+              </a>
+              <a href="https://psaltis.lt/" target="_blank">
+                <img src="/newsponsors/eglesukis.png" alt="Eglės ūkis">
+              </a>
+              <a href="https://psaltis.lt/" target="_blank">
+                <img src="/newsponsors/vigrima.png" alt="Vigrima">
+              </a>
+              <a href="https://psaltis.lt/" target="_blank">
+                <img src="/newsponsors/Skandivija.png" alt="Skandivija">
+              </a>
+              <a href="https://psaltis.lt/" target="_blank">
+                <img src="/newsponsors/slenis.png" alt="Slėnis">
+              </a>
+              <a href="https://psaltis.lt/" target="_blank">
+                <img src="/newsponsors/Agotos.png" width="240" alt="Agotos Parduotuvė">
+              </a>
             </div>
 
             <div class="sponsors-title">
                 <h1>Partneriai</h1>
             </div>    
             <div class="partners">
-                
+              <a href="https://plungeslaguna.lt/" target="_blank">
+                <img src="/newsponsors/Vieninga_Plunge.png" alt="Vieninga Plungė">
+              </a>
+              <a href="https://www.maneda.lt/" target="_blank">
+                <img src="/newsponsors/sporto centras.png" alt="Plungės sporto ir rekreacijos centras">
+              </a>
+              <a href="https://psaltis.lt/" target="_blank">
+                <img src="/newsponsors/ztv.png" alt="Žtv">
+              </a>
+              <a href="https://psaltis.lt/" target="_blank">
+                <img src="/newsponsors/laikrastis plunge.png" alt="Laikrastis Plunge">
+              </a>
+              <a href="https://psaltis.lt/" target="_blank">
+                <img src="/newsponsors/LN.png" alt="LN televizija">
+              </a>
             </div>
         </div>
     </div>
