--- a/website/mainPage/main.html
+++ b/website/mainPage/main.html
@@ -19,7 +19,9 @@
       <nav class="navbar">
 
         <div class="main-logo">
-            <img src="/photos/logotipas/Plunges_Olimpas.svg" height="68" alt="Logotipas">
+          <a href="/website/mainPage/main.html">
+            <img src="/photos/logotipas/Plunges_Olimpas.png" height="68" alt="Logotipas">
+          </a>  
         </div>
     
         <a href="#" class="toggle-button">
@@ -30,8 +32,9 @@
     
         <div class="navbar-links">
           <ul>
-            <li><a href="/website/mainPage/main.html">Pagrindinis</a></li>
             <li><a href="/website/nineNews/nineNews.html">Naujienos</a></li>
+            <li><a href="/website/team/team.html">Komanda</a></li>
+            <li><a href="/website/sponsors/sponsors.html">Rėmėjai</a></li>
             <li><a href="/website/contacts/contacts.html">Kontaktai</a></li>
           </ul>
         </div>
@@ -756,18 +759,18 @@
 
     <div class="logos">
       <div class="logos-slide">
-        <img src="/photos/sponsors/plunge.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/laguna.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/maneda.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/saltis.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/constro.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/oss.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/toregas.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/eglesukis.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/vigrima.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/skandivija.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/slenis.svg" alt="Rėmėjas">
-        <img src="/photos/sponsors/agotos.svg" alt="Rėmėjas">
+        <img src="/photos/sponsors/plunge.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/laguna.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/maneda.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/saltis.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/constro.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/oss.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/toregas.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/eglesukis.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/vigrima.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/Skandivija.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/slenis.png" alt="Rėmėjas">
+        <img src="/photos/sponsors/Agotos.png" alt="Rėmėjas">
       </div>
     </div>
 <!--  -->
@@ -780,7 +783,7 @@
       <div class="footer-title">
 
         <div class="footer-logo">
-          <img src="/photos/logotipas/Plunges_Olimpas.svg" alt="Logotipas">
+          <img src="/photos/logotipas/Plunges_Olimpas.png" alt="Logotipas">
         </div>
 
         <div class="footer-about">
