--- a/website/sponsors/sponsors.html
+++ b/website/sponsors/sponsors.html
@@ -47,7 +47,7 @@
             </div>
             <div class="general-sponsors">
                 <a href="https://www.plunge.lt/" target="_blank">
-                    <img src="/newsponsors/plunge.png" alt="Plungė">
+                    <img src="/photos/sponsors/plunge.png" alt="Plungė">
                 </a>
             </div>
 
@@ -56,13 +56,13 @@
             </div>    
             <div class="main-sponsors">
                 <a href="https://plungeslaguna.lt/" target="_blank">
-                    <img src="/newsponsors/laguna.png" alt="Lagūna">
+                    <img src="/photos/sponsors/laguna.png" alt="Lagūna">
                 </a>
                 <a href="https://www.maneda.lt/" target="_blank">
-                    <img src="/newsponsors/maneda.png" alt="Maneda">
+                    <img src="/photos/sponsors/maneda.png" alt="Maneda">
                 </a>
                 <a href="https://psaltis.lt/" target="_blank">
-                    <img src="/newsponsors/saltis.png" alt="Šaltis">
+                    <img src="/photos/sponsors/saltis.png" alt="Šaltis">
                 </a>
             </div>
 
@@ -71,28 +71,28 @@
             </div>
             <div class="sponsors">
               <a href="https://constro.eu/" target="_blank">
-                <img src="/newsponsors/constro.png" width="240" alt="Lagūna">
+                <img src="/photos/sponsors/constro.png" width="240" alt="Lagūna">
               </a>
-              <a href="https://www.maneda.lt/" target="_blank">
-                <img src="/newsponsors/oss.png" alt="Oss">
+              <a href="https://www.oss.lt/lt/" target="_blank">
+                <img src="/photos/sponsors/oss.png" alt="Oss">
               </a>
-              <a href="https://psaltis.lt/" target="_blank">
-                <img src="/newsponsors/toregas.png" alt="Toregas">
+              <a href="https://motointegrator.com/lt/lt/autoservisas/plunge/blpqrr95-uab-toregas" target="_blank">
+                <img src="/photos/sponsors/toregas.png" alt="Toregas">
               </a>
-              <a href="https://psaltis.lt/" target="_blank">
-                <img src="/newsponsors/eglesukis.png" alt="Eglės ūkis">
+              <a href="https://www.facebook.com/Ukis.Egles/" target="_blank">
+                <img src="/photos/sponsors/eglesukis.png" alt="Eglės ūkis">
               </a>
-              <a href="https://psaltis.lt/" target="_blank">
-                <img src="/newsponsors/vigrima.png" alt="Vigrima">
+              <a href="https://www.vigrima.lt/" target="_blank">
+                <img src="/photos/sponsors/vigrima.png" alt="Vigrima">
               </a>
-              <a href="https://psaltis.lt/" target="_blank">
-                <img src="/newsponsors/Skandivija.png" alt="Skandivija">
+              <a href="http://skandivija.com/en/" target="_blank">
+                <img src="/photos/sponsors/Skandivija.png" alt="Skandivija">
               </a>
-              <a href="https://psaltis.lt/" target="_blank">
-                <img src="/newsponsors/slenis.png" alt="Slėnis">
+              <a href="https://uabslenis.lt/" target="_blank">
+                <img src="/photos/sponsors/slenis.png" alt="Slėnis">
               </a>
-              <a href="https://psaltis.lt/" target="_blank">
-                <img src="/newsponsors/Agotos.png" width="240" alt="Agotos Parduotuvė">
+              <a href="https://pasagota.lt/" target="_blank">
+                <img src="/photos/sponsors/Agotos.png" width="240" alt="Agotos Parduotuvė">
               </a>
             </div>
 
@@ -100,20 +100,20 @@
                 <h1>Partneriai</h1>
             </div>    
             <div class="partners">
-              <a href="https://plungeslaguna.lt/" target="_blank">
-                <img src="/newsponsors/Vieninga_Plunge.png" alt="Vieninga Plungė">
+              <a href="https://www.facebook.com/vieninga.plunge/?locale=lt_LT" target="_blank">
+                <img src="/photos/sponsors/Vieninga_Plunge.png" alt="Vieninga Plungė">
               </a>
-              <a href="https://www.maneda.lt/" target="_blank">
-                <img src="/newsponsors/sporto centras.png" alt="Plungės sporto ir rekreacijos centras">
+              <a href="https://plungesrc.lt/" target="_blank">
+                <img src="/photos/sponsors/sporto centras.png" alt="Plungės sporto ir rekreacijos centras">
               </a>
-              <a href="https://psaltis.lt/" target="_blank">
-                <img src="/newsponsors/ztv.png" alt="Žtv">
+              <a>
+                <img src="/photos/sponsors/ztv.png" alt="Žtv">
               </a>
-              <a href="https://psaltis.lt/" target="_blank">
-                <img src="/newsponsors/laikrastis plunge.png" alt="Laikrastis Plunge">
+              <a href="https://laikrastisplunge.lt/" target="_blank">
+                <img src="/photos/sponsors/laikrastis plunge.png" alt="Laikrastis Plunge">
               </a>
-              <a href="https://psaltis.lt/" target="_blank">
-                <img src="/newsponsors/LN.png" alt="LN televizija">
+              <a>
+                <img src="/photos/sponsors/LN.png" alt="LN televizija">
               </a>
             </div>
         </div>
