--- a/website/mainPage/main.html
+++ b/website/mainPage/main.html
@@ -437,7 +437,6 @@
               <div class="info-area">
                 <h4>Matas Vyšniauskas</h4>
                 <p>Sunkusis kraštas</p>
-                <a href="#">Learn More</a>
               </div>
             </div>
             <div class="single-box text-center">
@@ -493,7 +492,7 @@
   <div class="container">
     <div class="button-all-team">
       <div class="info-area text-center">
-        <a href="#">Rodyti visus žaidėjus</a>
+        <a href="#">RODYTI VISUS ŽAIDĖJUS</a>
       </div>
     </div>
   </div>
