--- a/website/team/team.html
+++ b/website/team/team.html
@@ -49,6 +49,14 @@
 
 <div class="container-fluid">
   <div class="container">
+    <div class="img-team">
+      <img class="image-team" src="/plunges-olimpas-2510.jpg" alt="">
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="container">
     <div class="team">
 
       <div class="player col-xxl-4 col-xl-4">
