--- a/website/mainPage/main.html
+++ b/website/mainPage/main.html
@@ -33,11 +33,11 @@
         <div class="navbar-links">
           <ul>
             <li><a href="/website/nineNews/nineNews.html">Naujienos</a></li>
-            <li><a href="/website/contacts/contacts.html">Tvarkaraštis</a></li>
+            <li><a href="/website/schedule/schedule.html">Tvarkaraštis</a></li>
             <li><a href="/website/team/team.html">Komanda</a></li>
             <li><a href="/website/sponsors/sponsors.html">Rėmėjai</a></li>
             <li><a href="/website/contacts/contacts.html">Kontaktai</a></li>
-            <li><a href="/website/contacts/contacts.html">Apie</a></li>
+            <li><a href="/website/about/about.html">Apie</a></li>
           </ul>
         </div>
     
@@ -301,6 +301,12 @@
           </div>
 
         </div>
+
+        <div class="button-all-games">
+          <div class="info-area text-center">
+            <a href="#">RODYTI VISAS RUNGTYNES</a>
+          </div>
+    </div>
   
       </div>
   
@@ -330,7 +336,7 @@
   
               <div class="new-text">
   
-                <p>„Olimpo“ trenerių štabe – esminės permainos. Daugiau nei dešimtmetį vyriausiojo trenerio pareigas ėjusį Alidą Žukauską keičia jo asistentu dirbęs Mindaugas Tamušauskas.</p>
+                <p>„Olimpo“ trenerių štabe – esminės permainos. Daugiau nei dešimtmetį vyriausiojo trenerio pareigas ėjusį Alidą Žukauską keičia jo asistentu dirbęs Mindaugas Tamušauskas.aaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaa aaaaaaa aaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaa aaaaaaa aaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaa aaaaaaa</p>
                 
               </div>
   
@@ -448,7 +454,6 @@
               <div class="info-area">
                 <h4>Person's Name</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, obcaecati!</p>
-                <a href="#">Learn More</a>
               </div>
             </div>
             <div class="single-box text-center">
@@ -458,7 +463,6 @@
               <div class="info-area">
                 <h4>Person's Name</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, obcaecati!</p>
-                <a href="#">Learn More</a>
               </div>
             </div>
             <div class="single-box text-center">
@@ -468,7 +472,6 @@
               <div class="info-area">
                 <h4>Person's Name</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, obcaecati!</p>
-                <a href="#">Learn More</a>
               </div>
             </div>
             <div class="single-box text-center">
@@ -478,7 +481,6 @@
               <div class="info-area">
                 <h4>Person's Name</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, obcaecati!</p>
-                <a href="#">Learn More</a>
               </div>
             </div>
           </div>          
@@ -845,5 +847,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-</body>
 </html>
